Fixed overflow issue with kiosk forms

--- a/ui/scss/_form.scss
+++ b/ui/scss/_form.scss
@@ -70,6 +70,7 @@
   left: 0px;
   right: 0px;
   bottom: 0px;
+  overflow: auto;
 }
 
 .form__contents {
